--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Contact me</h1>
+    <a href="index.html">Go to Homepage</a>
+    <a href="photo.html">Check photo</a>>
   </body>
 </html>
