--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Homepage</title>
   </head>
   <body>
     <h1>Welcome to my website</h1>
-    <a href="/contact.html"></a>
-    <img src="photo.html" alt="" />
+    <a href="contact.html">Contact page</a>
+    <a href="photo.html">Check photo</a>
   </body>
 </html>
