--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,7 @@
     <title>Photo</title>
   </head>
   <body>
-    <img src="images/Croissant.jpg" alt="" />
+    <img src="images/Croissant.jpg" alt="Croissant image" />
 
     <a href="index.html">Go to Homepage</a>
     <a href="contact.html">Contact page</a>
